--- a/project/src/App.css
+++ b/project/src/App.css
@@ -20,3 +20,24 @@
 .App-link {
   color: #09d3ac;
 }
+
+.user-card {
+  background-color: #FFCACA;
+}
+
+.follower-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.follower-card {
+  box-shadow: 5px 10px #888888;
+  padding: 15px;
+  margin: 15px;
+  border-radius: 25px;
+  background-color: #FF5757;
+  max-width: 600px
+}
+
